Increase tab and tab label width to 100% and add flex-wrap property to tabs container. This is necessary to ensure that the tabs and tab labels properly wrap when there are too many to fit on one line.

--- a/packages/astro-tabs/src/tabs-styles.css
+++ b/packages/astro-tabs/src/tabs-styles.css
@@ -20,6 +20,7 @@
    gap: 10px;
    margin-bottom: 20px;
    justify-content: center;
+   flex-wrap: wrap;
 }
 
 .panels-container {
@@ -59,12 +60,14 @@
    display: flex;
    align-items: center;
    padding: 0;
+   width: 100%;
 }
 
 .tab-label {
    display: block;
    cursor: pointer;
    padding: 5px 15px;
+   width: 100%;
 }
 
 .radio-tab {
